Fixed style bug: Header gets scrolled out of view

--- a/src/styles/eui_theme_amsterdam_light.css
+++ b/src/styles/eui_theme_amsterdam_light.css
@@ -9110,7 +9110,8 @@ html {
 .euiHeader {
   box-shadow: 0 0.7px 1.4px rgba(0, 0, 0, 0.07), 0 1.9px 4px rgba(0, 0, 0, 0.05), 0 4.5px 10px rgba(0, 0, 0, 0.05), 0 15px 32px rgba(0, 0, 0, 0.04);
   height: 49px;
-  position: relative;
+  width: 100%;
+  position: absolute;
   z-index: 1000;
   display: -webkit-flex;
   display: flex;
